# graphit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  run.ps1  run.sh
equations/: circle.hpp  cosine.hpp  ellipse.hpp  hyperbola.hpp  parabola.hpp  sine.hpp  slope.hpp  vars.hpp
src/: CMakeLists.txt  constants.hpp  main.cpp
src/equations/: circle.hpp  cosine.hpp  ellipse.hpp  hyperbola.hpp  parabola.hpp  sine.hpp  slope.hpp
